mType/tests/testFiles/import/error/importInvalidExtension.mt
// Test: Wrong file extension
@Script
import { SomeClass } from "./modules/SomeFile.txt"

var obj = SomeClass();
